[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Font/SHPinscher-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Dialogue.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel"]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 3
size_flags_vertical = 3
margin_left = 100.0
margin_top = 53.0
margin_right = 313.0
margin_bottom = 158.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Alright"
visible_characters = -1
percent_visible = 1.0
script = ExtResource( 2 )

[node name="text+" type="Timer" parent="."]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="text_stay" type="Timer" parent="."]

process_mode = 1
wait_time = 3.42
one_shot = false
autostart = true

[connection signal="timeout"  from="text+"  to="." method="_on_Timer_timeout" binds=[  ]]

[connection signal="timeout"  from="text_stay"  to="." method="_on_text_stay_timeout" binds=[  ]]
